[workspace]
members = ["libs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anyhow = "^1.0.98"
rig-core = ">=0.12.0, <0.13.0"
schemars = "^0.8.21"
serde = "^1.0.219"
serde_json = "^1.0.140"
tokio = "^1.45.0"
proc-macro2 = "^1.0.88"
quote = "^1.0.38"
syn = "^2.0.85"

yart = { path = "./libs/yart" }
yart-macro = { path = "./libs/yart-macro" }
yart-shared = { path = "./libs/yart-shared" }
