[package]
name = "yart-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
name = "yart_macro"

[dependencies]
rig-core = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }

yart = { workspace = true }
