[package]
name = "yart-shared"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "YART Shared: Shared types and utilities for YART, including ToolError, ToolOutput, and schema generation"
repository = { workspace = true }

[lib]
name = "yart_shared"

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
