[package]
name = "yart"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "YART: A wrapper crate re-exporting the rig_tool macro and shared utilities for rig::tool::Tool"
repository = { workspace = true }

[lib]
name = "yart"

[dependencies]
yart-macro = { workspace = true }
yart-shared = { workspace = true }
